-Author Anahit homework 02.05 (Update Resume Page)

--- a/Anahit_Karyan_Web/Html_Css/2-30.04/Resume page/index.html
+++ b/Anahit_Karyan_Web/Html_Css/2-30.04/Resume page/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title> Resume  page </title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="./Styles/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="container">  
@@ -10,7 +11,7 @@
             <div class="flex1"> 
                 <div class="flex1-1">
                     <h3> RESUME  </h3>
-                    <img src="user.png">
+                    <img src="./Resurses/user.png" alt="Smiley face">
                     <h2> MARTIN DOE </h2>
                     <h4> Accountant  </h4>
                     <p> Contact </p>
@@ -18,9 +19,8 @@
                     <p> jhodeopro@frepik.com </p>
                     <p> 123 Park Ave 17XX, East 4336 </p> 
                 </div>
-
                 <div class="flex1-2">
-                     <img src="settings.png">
+                     <i class="fa fa-cogs"></i>
                      <h4> SKILLS </h4>
                      <p> SKILL 01 </p>
                      <progress value="22" max="100"></progress> 
@@ -38,8 +38,8 @@
                      <progress value="40" max="100"></progress>
                 </div>
                 <div class="flex1-3">
-                    <img src="chat.png">
-                     <h4> LANGUAGES </h4>
+                    <i class="fa fa-commenting-o"></i>
+                    <h4> LANGUAGES </h4>
                     <div class="ranges">        
                         <div>
                             <p> ENGLISH </p>
@@ -60,7 +60,7 @@
             <!-- Right -->
             <div class="flex2"> 
                 <div class="flex2-1">
-                    <img src="manager.png" class="inline">
+                    <i class="fa fa-user"></i>
                     <h2 class="inline"> About Me </h2>
                     <p> 
                      Lorem Ipsum has been the industry's standard . It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -68,25 +68,22 @@
                 </div>
                 <hr>
                 <div class="flex2-2">
-                      <img src="suitcase.png"> 
+                       <i class="fa fa-suitcase"></i>
                        <h2 > PROFESSIONAL EXPERIENCE </h2>
                        <ul>
                            <li>
-                                <pre> 2014-2015 JOB TITLES
-           COMPANY 
-                                </pre>
+                                <h5> 2014-2015 JOB TITLES </h5>
+                                <h5> COMPANY </h5>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
                            </li>
                            <li>
-                                <pre> 2014-2015 JOB TITLES
-           COMPANY
-                                </pre>
+                                <h5> 2014-2015 JOB TITLES </h5>
+                                <h5> COMPANY </h5>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
                             </li>
                             <li>
-                                <pre> 2014-2015 JOB TITLES
-           COMPANY
-                                </pre>
+                                <h5> 2014-2015 JOB TITLES </h5>
+                                <h5> COMPANY </h5>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p> 
                            </li>
 
@@ -94,56 +91,49 @@
                 </div>  
                 <hr>
                 <div class="flex2-3">
-                        <img src="mortarboard.png">
-                        <h2 > FORMAL EDUCATIN </h2>
-                       <ul>
-                           <li>
-                                <pre> 2007-2010 DEGRREE TITLES
-           INSTITUTION
-                                </pre>
-                                <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
-                           </li>
-                           <li>
-                                <pre> 2004-2007 DEGRREE TITLES
-           INSTITUTION
-                                </pre>
-                                <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
-                            </li>
-                            <li>
-                                <pre> 2002-2004 DEGRREE  TITLES
-            INSTITUTION
-                                </pre>
-                                <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p> 
-                           </li>
-
-                        </ul>
-
+                    <i class="fa fa-graduation-cap"></i>
+                    <h2 > FORMAL EDUCATIN </h2>
+                    <ul>
+                       <li>
+                            <h5> 2007-2010 DEGRREE TITLES <h5>
+                            <h5> INSTITUTION </h5>
+                            <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
+                       </li>
+                       <li>
+                            <h5> 2004-2007 DEGRREE TITLES </h5>
+                            <h5> INSTITUTION </h5>
+                            <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
+                        </li>
+                        <li>
+                            <h5> 2002-2004 DEGRREE  TITLES </h5>
+                            <h5> INSTITUTION </h5>
+                            <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p> 
+                        </li>
+                    </ul>
                 </div>
                 <hr>
                 <div class="flex2-4">
-                           <img src="trophy.png" >
-                           <h2 > AWARDS/CERTIFACATES </h2>
-                           <ol>
-                                <li>
-                                  - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT.
-                                <li>
-                                <li>
-                                  - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
-                                <li>
-                                <li>
-                                  - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
-                                <li>
-                                <li>
-                                  - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
-                                <li>
-                                <li>
-                                  - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
-                                <li>
-                           </ol>
+                    <i class="fa fa-trophy"></i>
+                    <h2 > AWARDS/CERTIFACATES </h2>
+                    <ol>
+                        <li>
+                             - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT.
+                        </li>
+                        <li>
+                             - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
+                        </li>
+                        <li>
+                             - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
+                        </li>
+                        <li>
+                             - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
+                        </li>
+                        <li>
+                             - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
+                        </li>
+                    </ol>
                 </div>
-
             </div>
-
        </div>
     </body>
 </html>
