--- a/Arthur_Aghajanyan/Web/HTML_CSS/re30.04.2019/profile.html
+++ b/Arthur_Aghajanyan/Web/HTML_CSS/re30.04.2019/profile.html
@@ -9,146 +9,148 @@
             <!--Left parts-->
             <div class="left">
                 <!--Cv information part-->
-                <h1 class="fontResume">RESUME</h1>
+                <h1 class="font-resume">RESUME</h1>
                 <div class="info">
-                    <img class="photoImg" src="images/resumeImg2.svg" alt="foto">
-                    <h1 class="fontInfoName">MARTIN DOE</h1>
-                    <h3 class="fontInfoAccount">Accountant</h3>
-                    <h4 class="fontInfoData">Contact<br>
-                        +123 456 789<br>jhondoepro@freepik.com<br>
-                        1234 Park Ave 17XX,East 4432</h4>
+                    <img src="images/resumeImg.gif" alt="foto">
+                    <h1>MARTIN DOE</h1>
+                    <dl>
+                        <dt>Accountant</dt>
+                        <dt>Contact</dt>
+                        <dt>+123 456 789</dt>
+                        <dt>jhondoepro@freepik.com</dt>
+                        <dt>1234 Park Ave 17XX,East 4432</dt>
+                    </dl>
                 </div>
                 <!--Skills part-->
-                <div class="skillsData">
-                    <img class="skillIcon"src="images/settings-icon-13.png" alt"Skills icon"/></img>
-                    <h2 class="fontInfoSkill">SKILLS</h2>
-                    <div class="skillList">
-                        <p class="fontSkill">SKILL 01</p>
-                        <input class="firstGroupSlider" type="range" value="87">
-                        <p class="fontSkill">SKILL 02</p>
-                        <input class="firstGroupSlider" type="range" value="70">
-                        <p class="fontSkill">SKILL 03</p>
-                        <input class="firstGroupSlider" type="range" value="82">
-                        <p class="fontSkill">SKILL 04</p>
-                        <input class="firstGroupSlider" type="range" value="60">
-                        <p class="fontSkill">SKILL 05</p>
-                        <input class="firstGroupSlider" type="range" value="75">
-                        <p class="fontSkill">SKILL 06</p>
-                        <input class="firstGroupSlider" type="range" value="60">
-                        <p class="fontSkill">SKILL 07</p>
-                        <input class="firstGroupSlider" type="range" value="72">
+                <div class="skills-data">
+                    <img src="images/settings-icon-13.png" alt"Skills icon"/>
+                    <h2>SKILLS</h2>
+                    <div>
+                        <dl>
+                            <dt>SKILL 01</dt>
+                            <input class="first-group-slider" type="range" value="87">
+                            <dt>SKILL 02</dt>
+                            <input class="first-group-slider" type="range" value="70">
+                            <dt>SKILL 03</dt>
+                            <input class="first-group-slider" type="range" value="82">
+                            <dt>SKILL 04</dt>
+                            <input class="first-group-slider" type="range" value="60">
+                            <dt>SKILL 05</dt>
+                            <input class="first-group-slider" type="range" value="75">
+                            <dt>SKILL 06</dt>
+                            <input class="first-group-slider" type="range" value="60">
+                            <dt>SKILL 07</dt>
+                            <input class="first-group-slider" type="range" value="72">
+                        </dl>
                     </div>
                 </div>
                 <!--Languages part-->
-                <img class="messageIcon" src="images/messageIcon.png"/></img>
-                <h2 class="fontLanguage">LANGUAGES</h2>
-                <div class="flex-container-second languageList">
-                    <div class="sliderDiv">
-                        <p class="languageElement">ENGLISH</p>
-                        <input value="90" class="secondGroupSlider" type ="range"/>
+                <img class="message-icon" src="images/messageIcon.png"/>
+                <h2>LANGUAGES</h2>
+                <div class="flex-container-second language-list">
+                    <div>
+                        <p>ENGLISH</p>
+                        <input value="90" class="second-group-slider" type ="range"/>
                     </div>
-                    <div class="sliderDiv">
-                        <p class="languageElement">RUSSIAN</p>
-                        <input value="50" class="secondGroupSlider" type ="range"/>
+                    <div>
+                        <p>RUSSIAN</p>
+                        <input value="50" class="second-group-slider" type ="range"/>
                     </div>
-                    <div class="sliderDiv">
-                        <p class="languageElement">CHINESE</p>
-                        <input value="75" class="secondGroupSlider" type ="range"/>
+                    <div>
+                        <p>CHINESE</p>
+                        <input value="75" class="second-group-slider" type ="range"/>
                     </div>
                 </div>
             </div>
             <!--Right part-->
             <div class="right">
                 <div>
-                    <img class="userIcon otherClassForInline" src="images/user.png" alt"User icon"></img>
-                    <h2 class="userText otherClassForInline">About Me</h2>
+                    <img class="user-icon other-class-for-inline" src="images/user.png" alt"User icon">
+                    <h2 class="other-class-for-inline">About Me</h2>
                 </div>
-                <div class="aboutMeText">
-                    <span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit , sed diam nonum-<br>
-                        my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Ut<br>
-                        wisi enim ad minim veniam , quis nostrud exerci tation ulilamcorper suscipit<br>
-                        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum inure<br>
-                        dolor in hendrent in vulputate vebt esse molesbe consequat,vel idum dolore</span>
+                <div class="about-me-text">
+                    <p>Lorem ipsum dolor sit amet , consectetuer adipiscing elit , sed diam nonum-
+                    my nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Ut
+                    wisi enim ad minim veniam,quis nostrud exerci tation ulilamcorper suscipit
+                    lobortis nisl ut aliquip ex ea commodo consequat . Duiis autems vel eum inure
+                    dolor in hendrent in vulputate vebt esse molesbe consequat,vel idum dolore</p>
                 </div>
-                <hr class="settingHr">
-                </hr>
+                <hr>
                 <div>
-                    <img class="suitcaseIcon otherClassForInline" src="images/suitcase.png" alt"suitcase"></img>
-                    <h2 class="suitcaseText otherClassForInline">PROFESSIONAL EXPERIENCE</h2>
+                    <img class="settings-icon" src="images/suitcase.png" alt"suitcase">
+                    <h2 class="other-class-for-inline">PROFESSIONAL EXPERIENCE</h2>
                 </div>
                 <!--Timeline EXPERIENCE part-->
-                <div>
+                <div class="setting-other-text">
                     <ul class="timeline">
                         <li>
-                            <p><h3 class="time otherClassForInline">2014 - 2015</h3><h3 class="otherClassForInline">JOB TITLES</h3><h3 class="company">COMPANY</h3>
-                            <h5 class="otherTextFirst">Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed<br>
-                                diam nonummy nibh euismod tincidunt ut laoreet dolore magna<br>
-                                aliquam erat volutpat.</h5></p>
+                            <h3 class="time other-class-for-inline">2014 - 2015</h3><h3 class="other-class-for-inline">JOB TITLES</h3><h3 class="company">COMPANY</h3>
+                            <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed
+                            diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                            aliquam erat volutpat.</p>
                         </li>
                         <li>
-                            <p><h3 class="time otherClassForInline">2014 - 2015</h3><h3 class="otherClassForInline">JOB TITLES</h3><h3 class="company">COMPANY</h3>
-                            <h5 class="otherTextFirst">Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed<br>
-                                diam nonummy nibh euismod tincidunt ut laoreet dolore magna<br>
-                                aliquam erat volutpat.</h5></p>
+                            <h3 class="time other-class-for-inline">2014 - 2015</h3><h3 class="other-class-for-inline">JOB TITLES</h3><h3 class="company">COMPANY</h3>
+                            <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed
+                            diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                            aliquam erat volutpat.</p>
                         </li>
                         <li>
                             <li>
-                                <p><h3 class="time otherClassForInline">2014 - 2015</h3><h3 class="otherClassForInline">JOB TITLES</h3><h3 class="company">COMPANY</h3>
-                                <h5 class="otherTextFirst">Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed<br>
-                                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna<br>
-                                    aliquam erat volutpat.</h5></p>
+                                <h3 class="time other-class-for-inline">2014 - 2015</h3><h3 class="other-class-for-inline">JOB TITLES</h3><h3 class="company">COMPANY</h3>
+                                <p> Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed
+                                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                                aliquam erat volutpat.</p>
                             </li>
                     </ul>
                 </div>
-                <hr class="settingHr">
-                </hr>
+                <hr>
+
                 <div>
-                    <img class="studentsCapIcon otherClassForInline" src="images/students-cap.png" alt"students-cap"></img>
-                    <h2 class="suitcaseText otherClassForInline">FORMAL EDUCATION</h2>
+                    <img class="settings-icon" src="images/students-cap.png" alt"students-cap">
+                    <h2 class="other-class-for-inline">FORMAL EDUCATION</h2>
                 </div>
                 <!--Timeline FORMAL EDUCATION part-->
-                <div>
+                <div class="setting-other-text">
                     <ul class="timeline">
                         <li>
-                            <p><h3 class="time otherClassForInline">2007- 2010</h3><h3 class="otherClassForInline">DEGREE TITLES</h3><h3 class="company">INSTITUTION</h3>
-                            <h5 class="otherText">Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed<br>
-                                diam nonummy nibh euismod tincidunt ut laoreet dolore magna<br>
-                                aliquam erat volutpat.</h5></p>
+                            <h3 class="time other-class-for-inline">2007- 2010</h3><h3 class="other-class-for-inline">DEGREE TITLES</h3><h3 class="company">INSTITUTION</h3>
+                            <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed
+                            diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                            aliquam erat volutpat.</p>
                         </li>
                         <li>
-                            <p><h3 class="time otherClassForInline">2014 - 2015</h3><h3 class="otherClassForInline">DEGREE TITLES</h3><h3 class="company">INSTITUTION</h3>
-                            <h5 class="otherText">Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed<br>
-                                diam nonummy nibh euismod tincidunt ut laoreet dolore magna<br>
-                                aliquam erat volutpat.</h5></p>
+                            <h3 class="time other-class-for-inline">2014 - 2015</h3><h3 class="other-class-for-inline">DEGREE TITLES</h3><h3 class="company">INSTITUTION</h3>
+                            <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed
+                            diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                            aliquam erat volutpat.</p>
                         </li>
                         <li>
                             <li>
-                                <p><h3 class="time otherClassForInline">2014 - 2015</h3><h3 class="otherClassForInline">DEGREE TITLES</h3><h3 class="company">INSTITUTION</h3>
-                                <h5 class="otherText">Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed<br>
-                                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna<br>
-                                    aliquam erat volutpat.</h5></p>
+                                <h3 class="time other-class-for-inline">2014 - 2015</h3><h3 class="other-class-for-inline">DEGREE TITLES</h3><h3 class="company">INSTITUTION</h3>
+                                <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit , sed<br>
+                                diam nonummy nibh euismod tincidunt ut laoreet dolore magna<br>
+                                aliquam erat volutpat.</p>
                             </li>
                     </ul>
-                    <hr class="settingHr">
-                    </hr>
+                    <hr>
                 </div>
                 <!--CERTIFICATE part-->
                 <div>
-                    <img class="studentsCapIcon otherClassForInline" src="images/cup.png" alt"cup"></img>
-                    <h2 class="suitcaseText otherClassForInline">AWARDS / CERTIFICATES</h2>
+                    <img class="settings-icon" src="images/cup.png" alt"cup">
+                    <h2 class="other-class-for-inline">AWARDS / CERTIFICATES</h2>
                 </div>
-                <div class="certificatesInfo">
-                    <span>
-                        <h3>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</h3>
-                        <h3>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</h3>
-                        <h3>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</h3>
-                        <h3>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</h3>
-                        <h3>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</h3>
-                        <h3>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</h3>
+                <div class="certificates-info">
+                    <dl>
+                        <dt>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</dt>
+                        <dt>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</dt>
+                        <dt>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</dt>
+                        <dt>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</dt>
+                        <dt>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</dt>
+                        <dt>-LOREM IPSUM DOLOR SIT AMET, CONSECTETUER ADIPISCING ELIT</dt>
+                    </dl>
                 </div>
             </div>
-
         </div>
-
     </body>
 </html>
