--- a/Tigran_Nalbandyan/HTML/resume.html
+++ b/Tigran_Nalbandyan/HTML/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./styles/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -101,7 +101,7 @@
                     <i class="fa fa-suitcase right-icons"></i>
                     PROFESSIONAL EXPERIENCE
                     </h3>
-                    <div class="right_part-divs left-bordered">
+                    <div class="right_part-divs">
                         <ul class="right-list">
                             <li>
                                 <table>
@@ -162,7 +162,7 @@
                     <i class="fa fa-graduation-cap right-icons"></i>
                     FORMAL EDUCATION
                     </h3>
-                    <div class="left-bordered">
+                    <div> 
                         <ul class="right-list">
                             <li>
                                 <table>
