-Author Arthur Aghajanyan
        -Updated boostrap homework

--- a/Arthur_Aghajanyan/Bootstrap/page.html
+++ b/Arthur_Aghajanyan/Bootstrap/page.html
@@ -4,6 +4,7 @@
         <title>Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -12,6 +13,7 @@
         <link rel="stylesheet" href="other/icon.css">
     </head>
     <body>
+        <!--First part-->
         <nav class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="d-flex flex-grow-1">
                 <a class="navbar-brand" href="#">
@@ -41,37 +43,35 @@
             </div>
         </nav>
 
-
-        <div class="jumbotron jumbotron-fluid d-flex flex-column-reverse">
+        <!--Second part-->
+        <div class="jumbotron jumbotron-fluid">
             <div class="container row ">
-                <div class="col-12 col-md-2 d-flex flex-column"></div>
-                <div class="col-12 col-md-10 row">
-                    <div class="col-md-6 col-sm-12">
+                <div class="col-md-2 col-sm-2"></div>
+                <div class="row col-md-10 col-sm-10">
+                    <div class="col-md-7 col-sm-12">
                         <h2 class="text">Bootstrap 101 template</h2>
                         <p class="text">Proident eu nisi commodo enim ddeserunt enim duis sunt nostrud anim.Sunt do sit enim veniam nostrud culpa adipisicing do ullamco occaecat et.</p>
                         <a class="btn btn-primary btn-sm" href="#" role="button">Discover more</a>
                         <a class="btn btn-outline-info btn-sm" href="#" role="button">Some another action</a>
                     </div>
-                    <div class="col-md-6 col-sm-12">
-                        <img src="other/photo1.png" class="mt-5" alt="Notebook" width="304" height="224">
+                    <div class="col-md-5 col-sm-12">
+                        <img src="other/photo1.png" class="mt-5" alt="Notebook" width="354" height="224">
                     </div>
                 </div>
             </div>
         </div>
         <!--Service text part-->
         <div class="container d-flex row">
-            <div class="col-12 col-md-2">
-            </div>
-            <div class="col-12 col-md-10"><h3>Services</h3>
+            <div class="col-md-2 col-sm-2"></div>
+            <div class="col-md-10 col-sm-10"><h3>Services</h3>
                 <p class="text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
             </div>
         </div>
 
         <!--Icon part-->
         <div class="container row d-flex">
-            <div class="col-12 col-md-2">
-            </div>
-            <div class="col-12 col-md-10 row">
+            <div class="col-md-2 col-sm-2"></div>
+            <div class="row col-md-10 col-sm-10">
                 <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-magic-wand my-3"><use xlink:href="#lnr-magic-wand"></use></svg>
                     <p class="text">Ex cupiatat eu</p>
                     <p class="text-secondary">Ex cupidatat eu official consequat incididunt labore occaecat ut veniam labore et cillum id et.</p>
@@ -103,8 +103,8 @@
 
         <div class="jumbotron jumbotron-fluid d-flex">
             <div class="container row d-flex">
-                <div class="col-12 col-md-2"></div>
-                <div class="col-12 col-md-10 row">
+                <div class="col-md-2 col-sm-2"></div>
+                <div class="row col-md-10 col-sm-10">
                     <div class="col-md-4 col-sm-12"><div class="card bg-white">
                             <img src="other/photo2.png"alt="Photo2" style="width:100%">
                             <div class="card-body">
@@ -193,19 +193,19 @@
                 </div>
             </div>
         </div>
-        <!--Part 5-->
+        <!--Part 6-->
         <div class="container d-flex">
             <svg class="icon-view icon-view1 lnr-heart my-3 mx-auto"><use xlink:href="#lnr-heart"></use></svg>
         </div>
         <div class="container">
             <h5 class="text-center">There is no place like 127.0.0.1<h5></div>
         <p class="text-center">-Someone famous in Source Title</p>
-        <!--Part 6-->
+        <!--Part 7-->
 
         <div class="jumbotron jumbotron-fluid ">
             <div class="container row d-flex">
-                <div class="col-12 col-md-2"></div>
-                <div class="col-12 col-md-10 row">
+                <div class="col-md-2 col-sm-2"></div>
+                <div class="row col-md-10 col-sm-10">
                     <div class="col-md-4 col-sm-12">
                         <h4 class="text">Bootstrap 101</h4>
                         <p class="text">hello@bootsrtap101.com</p>
@@ -233,3 +233,4 @@
 
     </body>
 </html>
+
