fixed small screen style for navbar

--- a/Garik_Saghumyan/Web/bootsrap.html
+++ b/Garik_Saghumyan/Web/bootsrap.html
@@ -6,19 +6,28 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+		
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-light bg-light justify-content-between">
-			<a class="navbar-brand">Bootstrap 101</a>
-			<form class="form-inline">
-				<button type="button" class="btn">About Us</button>
-				<button type="button" class="btn">Features</button>
-				<button type="button" class="btn">Testimonials</button>
-				<button type="button" class="btn btn-primary">Sign Up</button>			
-			</form>
+		<nav class="navbar navbar-expand-md bg-light navbar-light">
+  			<a class="navbar-brand" href="#">Bootstrap 101</a>
+ 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    			<span class="navbar-toggler-icon"></span>
+  			</button>
+  			<div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+    			<div class="nav navbar">
+					<form class="form-inline">
+						<button type="button" class="btn">About Us</button>
+						<button type="button" class="btn">Features</button>
+						<button type="button" class="btn">Testimonials</button>
+						<button type="button" class="btn btn-primary">Sign Up</button>			
+					</form>
+				</div>
+  			</div>  
 		</nav>
 		<div class="jumbotron jumbotron-fluid">
 				<div class="container d-flex justify-content-center ">
