-Author Arthur Aghajanyan
        Updated bootstrap homework()

--- a/Arthur_Aghajanyan/Bootstrap/page.html
+++ b/Arthur_Aghajanyan/Bootstrap/page.html
@@ -48,15 +48,16 @@
             <div class="container row ">
                 <div class="col-md-2 col-sm-2"></div>
                 <div class="row col-md-10 col-sm-10">
-                    <div class="col-md-7 col-sm-12">
+                    <div class="col-md-6 order-md-12">
+                        <img src="other/photo1.png" class="mt-5" alt="Notebook" width="354" height="224">
+                    </div>
+                    <div class="col-md-6 order-md-1">
                         <h2 class="text">Bootstrap 101 template</h2>
                         <p class="text">Proident eu nisi commodo enim ddeserunt enim duis sunt nostrud anim.Sunt do sit enim veniam nostrud culpa adipisicing do ullamco occaecat et.</p>
                         <a class="btn btn-primary btn-sm" href="#" role="button">Discover more</a>
                         <a class="btn btn-outline-info btn-sm" href="#" role="button">Some another action</a>
                     </div>
-                    <div class="col-md-5 col-sm-12">
-                        <img src="other/photo1.png" class="mt-5" alt="Notebook" width="354" height="224">
-                    </div>
+
                 </div>
             </div>
         </div>
