--- a/Hunan_Khachatryan/bootstrap-page.html
+++ b/Hunan_Khachatryan/bootstrap-page.html
@@ -33,15 +33,16 @@
 	      	<div class="container py-5">
 	    		<div class="container-fluid  p-4">
 	     			<div class="row">
-					<div class="col-12 col-md-6 ">
+					<div class="col-12 col-md-6 order-md-12">
+						<div> <img src="pictures/notebook.jpg" ></div>
+					</div>
+					<div class="col-12 col-md-6 order-md-1 ">
 						<h1>Bootstrap 101 template</h1>
 						<p>Proident eu nisi commodo enim deserunt enim duis sunt nostrud anim.Sunt du sit enim veniam nostrud culpa adipisicing do ullamco occaecat et.</p>
 						<button type="button" class="btn btn-primary p-1 m-1">Discover More</button>
 						<button type="button" class="btn btn-outline-primary p-1 m-1">Some another action</button>
 					</div>
-					<div class="col-12 col-md-6 ">
-						<div> <img src="picture/notebook.jpg" ></div>
-					</div>
+					
 				</div>
 			</div>
 	      	</div>
@@ -115,7 +116,9 @@
 	      					<div class="card-body">
 	      						<h5> <a href="#" class="text-dark">Ex cupidatat eu</a></h5>
 	      						<p class="card-text">Ex cupidatat eu officia consequat incididunt labore occaecat ut veniam labore et cillum id et.</p>
-	      						<p class="card-text"><a href="#">Read more</a></p>
+	      						<p class="card-text"> <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo1">Read More</button>
+                                			<div id="demo1" class="collapse"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                              				</div></p>
 	      					</div>
 	      				</div>
 	      			</div>
@@ -125,7 +128,9 @@
 	      					<div class="card-body">
 	      						<h5> <a href="#" class="text-dark">Tempor aute occaecat</a></h5>
 							<p class=" card-text">Tempor aute occaecat pariatur esse aute amet.</p>
-					      		<p class="card-text"><a href="#">Read more</a></p>
+					      		<p class="card-text"> <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo2">Read More</button>
+                                			<div id="demo2" class="collapse"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                              				</div></p>
 		      				</div>
 	      				</div>
 	      			</div>
@@ -135,7 +140,9 @@
 	      					<div class="card-body">
 	      						<h5> <a href="#" class="text-dark">Voluptate ex irure</a></h5>
 	      						<p class=" card-text">Voluptate ex irure ipsum ipsum ullamco ipsum reprehenderit non ut mollit commodo.</p>
-	      						<p class="card-text"><a href="#">Read more</a></p>
+	      						<p class="card-text"> <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo3">Read More</button>
+                                			<div id="demo3" class="collapse"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                              				</div></p>
 		      				</div>
 	      				</div>
 				</div>
@@ -145,7 +152,9 @@
 	      					<div class="card-body">
 	      						<h5> <a href="#" class="text-dark">Tempor commodo</a></h5>
 	      						<p class="card-text">Tempor commodo nostrud ex Lorem occaecat duis occaecat minim.</p>
-	      						<p class="card-text"><a href="#">Read more</a></p>
+	      						<p class="card-text"> <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo4">Read More</button>
+                                			<div id="demo4" class="collapse"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                              				</div></p>
 						</div>
 	      				</div>
 	      			</div>
@@ -155,7 +164,9 @@
 	      					<div class="card-body">
 	      						<h5> <a href="#" class="text-dark">Et fugiat sint occaecat</a></h5>
 					      		<p class="card-text">Et fugiat sint occaecat voluptate incididunt anim nostrud ea cillum cillum consequat.</p>
-	      						<p class="card-text"><a href="#">Read more</a></p>
+	      						<p class="card-text"> <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo5">Read More</button>
+                                			<div id="demo5" class="collapse"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                              				</div></p>
 		      				</div>
 	      				</div>
 	      			</div>
@@ -165,7 +176,9 @@
 	      					<div class="card-body">
 	      						<h5> <a href="#" class="text-dark">Et labore tempor et</a></h5>
 	      						<p class=" card-text">Et labore tempor et adipisicing dolor.</p>
-							<p class="card-text"><a href="#">Read more</a></p>
+							<p class="card-text"> <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo6">Read More</button>
+                                			<div id="demo6" class="collapse"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                              				</div></p>
 		      				</div>
 	      				</div>
 	      			</div>
