Authur : Garik Saghumyan : bug fixed

--- a/Garik_Saghumyan/Web/bootsrap.html
+++ b/Garik_Saghumyan/Web/bootsrap.html
@@ -32,14 +32,14 @@
 		<div class="jumbotron jumbotron-fluid">
 				<div class="container d-flex justify-content-center ">
 					<div class="row">
-						<div class="col-sm">
+						<div class="col-12 col-md-6">
 							<h1>Bootstrap 101 templete</h1>
 							<p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.
 				   			Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
-							<a href="https://getbootstrap.com/docs/4.0/getting-started/introduction/" class="btn btn-info" role="button">Discover More</a>
-							<a href="https://www.w3schools.com/bootstrap4/default.asp" class="btn btn-outline-info" role="button">Some Another Action</a>
+							<a href="https://getbootstrap.com/docs/4.0/getting-started/introduction/" class="btn btn-primary" role="button">Discover More</a>
+							<a href="https://www.w3schools.com/bootstrap4/default.asp" class="btn btn-outline-primary" role="button">Some Another Action</a>
 						</div>
-						<div class="col-sm ">
+						<div class="col-12 col-md-6">
 							<img class="shadow p-3 mb-5 rounded" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQK6C0mgXlqZIv2emg9WC1c__nK68gUounXFoFEvh6er9gE0GMM"  alt="notebook" width="480" height="300">
 						</div>
 					</div>
@@ -49,34 +49,33 @@
 			<h2>Services</h2>
 			<p class="mb-5">There are many variations of passages Lorem Ipsum avilable, but the majority have suffered altaration in some form</p>
 			<div class="row mb-5">
-				<div class="col-sm">
-					<i class="fas fa-magic text-primary"></i>
+				<div class="col-6 col-md-4">
+					<i class="fas fa-magic text-primary h3"></i>
 					<p class="font-weight-bold">Ex cupidatat eu</p>
 					<p>Tempor comondo nostrud ex lorem occeacat</p>
 				</div>
-				<div class="col-sm">
-					<i class="far fa-heart text-primary"></i>
+				<div class="col-6 col-md-4">
+					<i class="far fa-heart text-primary h3"></i>
 					<p class="font-weight-bold">Tempor aute occaecat</p>
 					<p>Tempor comondo nostrud ex lorem occeacat tempor oseacat lorem ipsum</p>
 				</div>
-				<div class="col-sm">
-					<i class="fas fa-rocket text-primary"></i>
+				<div class="col-6 col-md-4">
+					<i class="fas fa-rocket text-primary h3"></i>
 					<p class="font-weight-bold">Voluptate ex irure</p>
 					<p>Lorem el comondo nostrud ex lorem occeacat tempor oseacat lorem ipsum</p>
 				</div>
-				<div class="w-100"></div>
-				<div class="col-sm">
-					<i class="fas fa-paperclip text-primary"></i>
+				<div class="col-6 col-md-4">
+					<i class="fas fa-paperclip text-primary h3"></i>
 					<p class="font-weight-bold">Tempor commo</p>
 					<p>Tempor comondo nostrud ex lorem occeacat oseacat lorem ipsum</p>
 				</div>
-				<div class="col-sm">
-					<i class="fas fa-tv text-primary"></i>
+				<div class="col-6 col-md-4">
+					<i class="fas fa-tv text-primary h3"></i>
 					<p class="font-weight-bold">El fugiat si occaecatet</p>
 					<p>El tempor comondo nostrud ex lorem occeacat tempor oseacat lorem ipsum</p>
 				</div>
-				<div class="col-sm">
-					<i class="fas fa-inbox text-primary"></i>
+				<div class="col-6 col-md-4">
+					<i class="fas fa-inbox text-primary h3"></i>
 					<p class="font-weight-bold">El labore tempo et</p>
 					<p>Tempor comondo nostrud ex lorem occeacat tempor oseacat lorem</p>
 				</div>
@@ -170,7 +169,7 @@
 		</div>
 		<div class="jumbotron jumbotron-fluid bg-white">
 			<div class="d-flex justify-content-center">
-				<i class="far fa-heart" ></i>
+				<i class="far fa-heart h2" ></i>
 			</div>
 			<div class="d-flex justify-content-center">
 				<h3>There is no place like 127.0.0.1</h3>
@@ -182,19 +181,19 @@
 		<div class="jumbotron jumbotron-fluid mb-0">
 			<div class="container-fluid d-flex justify-content-center">
 				<div class="row">
-					<div class="col-sm">
+					<div class="col-12 col-md-4">
 						<h2>Bootstrap 101</h2>
 						<p>hello@bootstrap@gmail.com</p>
 						<p>+00 123 456 789</p>
 						<p>Laborum aete enim animast text u eli animast text lorem ipsum</p>
 					</div>
-					<div class="col-sm">
+					<div class="col-12 col-md-4">
 						<h2>Pages</h2>
 						<p>Nisli in comdo</p>
 						<p>lorem ipsum esiminch lorem ipsum comondo nisli</p>
 						<p>u eli animast </p>
 					</div>
-					<div class="col-sm">
+					<div class="col-12 col-md-4">
 						<h2>Favorites</h2>
 						<p>Nisli in comdo lorem ipsum</p>
 						<p>animst text lorem ipsum </p>
@@ -203,18 +202,14 @@
 				</div>
 			</div>	
 		</div>
-		<div class="d-flex justify-space-around bg-dark text-white ">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-sm d-flex justify-content-center">
-						<p>2018 Your Company, All rights reserved</p>
-					</div>
-					<div class="col-sm d-flex justify-content-center">
-						<p>Template by Bootstrapius</p>
-					</div>
+			<div class="container-fluid d-flex justify-space-around bg-dark text-white">
+				<div class="col-md-6 col-12 d-flex justify-content-center">
+					<p>2018 Your Company, All rights reserved</p>
+				</div>
+				<div class="col-md-6 col-12 d-flex justify-content-center">
+					<p>Template by Bootstrapius</p>
 				</div>
 			</div>
-		</div>
 	</div>
 </body>
 </html>
