Changes in Bootstrap.html by Anna Harutyunyan

--- a/Anna_Harutyunyan_bootstrap/Anna_H_bootstrap/Bootstrap.html
+++ b/Anna_Harutyunyan_bootstrap/Anna_H_bootstrap/Bootstrap.html
@@ -155,8 +155,8 @@
                             <div class="card-body"> 
                                 <p class="card-title font-weight-bold h5">Ex upidatat eu</p>
                                 <p class="card-text">Ex upidatat eu officia onsequat labore occaecat ut venium labore et cillum id et</p>
-                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo">Read more</button>
-                                <div id="demo" class="collapse">
+                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo1">Read more</button>
+                                <div id="demo1" class="collapse">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </div>
@@ -169,8 +169,8 @@
                             <div class="card-body">
                                 <p class="card-title font-weight-bold h5">Tempor aute occaecat</p>
                                 <p class="card-text">Tempor aute occaecat pariatur esse aute amet</p>
-                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo">Read more</button>
-                                <div id="demo" class="collapse">
+                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo2">Read more</button>
+                                <div id="demo2" class="collapse">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </div>
@@ -183,8 +183,8 @@
                             <div class="card-body">
                                 <p class="card-title font-weight-bold h5">Voluptate ex irure</p>
                                 <p class="card-text">Voluptate ex irure ispum ospum ullamaco ispum non ut mollit commando</p>
-                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo">Read more</button>
-                                <div id="demo" class="collapse">
+                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo3">Read more</button>
+                                <div id="demo3" class="collapse">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </div>
@@ -200,8 +200,8 @@
                             <div class="card-body">
                                 <p class="card-title font-weight-bold h5">Tempor commando</p>
                                 <p class="card-text">Tempor commando notrud ex Lorem occaecat duis occaecat minim</p>
-                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo">Read more</button>
-                                <div id="demo" class="collapse">
+                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo4">Read more</button>
+                                <div id="demo4" class="collapse">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </div>
@@ -214,8 +214,8 @@
                             <div class="card-body">
                                 <p class="card-title font-weight-bold h5">Et figiat sint occaecat</p>
                                 <p class="card-text">Et figiat sint occaecat voluptate incididunt anim nostrud ea cillum cillum consecuat</p>
-                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo">Read more</button>
-                                <div id="demo" class="collapse">
+                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo5">Read more</button>
+                                <div id="demo5" class="collapse">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </div>
@@ -228,8 +228,8 @@
                             <div class="card-body">
                                 <p class="card-title font-weight-bold h5">Et labore tempor et</p>
                                 <p class="card-text">Et labore tempor et occaecat voluptate incididunt adipisicing dolor</p>
-                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo">Read more</button>
-                                <div id="demo" class="collapse">
+                                <button type="button" class="btn btn-link px-0" data-toggle="collapse" data-target="#demo6">Read more</button>
+                                <div id="demo6" class="collapse">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                 </div>
