--- a/Arthur_Aghajanyan/Bootstrap/page.html
+++ b/Arthur_Aghajanyan/Bootstrap/page.html
@@ -46,8 +46,8 @@
         <!--Second part-->
         <div class="jumbotron jumbotron-fluid">
             <div class="container row ">
-                <div class="col-md-2 col-sm-2"></div>
-                <div class="row col-md-10 col-sm-10">
+                <div class="col-sm-2"></div>
+                <div class="row col-sm-10">
                     <div class="col-md-6 order-md-12">
                         <img src="other/photo1.png" class="mt-5" alt="Notebook" width="354" height="224">
                     </div>
@@ -63,16 +63,16 @@
         </div>
         <!--Service text part-->
         <div class="container d-flex row">
-            <div class="col-md-2 col-sm-2"></div>
-            <div class="col-md-10 col-sm-10"><h3>Services</h3>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-10"><h3>Services</h3>
                 <p class="text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
             </div>
         </div>
 
         <!--Icon part-->
         <div class="container row d-flex">
-            <div class="col-md-2 col-sm-2"></div>
-            <div class="row col-md-10 col-sm-10">
+            <div class="col-sm-2"></div>
+            <div class="row col-sm-10">
                 <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-magic-wand my-3"><use xlink:href="#lnr-magic-wand"></use></svg>
                     <p class="text">Ex cupiatat eu</p>
                     <p class="text-secondary">Ex cupidatat eu official consequat incididunt labore occaecat ut veniam labore et cillum id et.</p>
@@ -104,9 +104,10 @@
 
         <div class="jumbotron jumbotron-fluid d-flex">
             <div class="container row d-flex">
-                <div class="col-md-2 col-sm-2"></div>
-                <div class="row col-md-10 col-sm-10">
-                    <div class="col-md-4 col-sm-12"><div class="card bg-white">
+                <div class="col-sm-2"></div>
+                <div class="row row-eq-height col-sm-10">
+                    <div class="col-md-4 col-sm-12">
+                        <div class="card bg-white">
                             <img src="other/photo2.png"alt="Photo2" style="width:100%">
                             <div class="card-body">
                                 <h5>Ex cupidatat eu</h5>
@@ -198,34 +199,52 @@
         <div class="container d-flex">
             <svg class="icon-view icon-view1 lnr-heart my-3 mx-auto"><use xlink:href="#lnr-heart"></use></svg>
         </div>
-        <div class="container">
+        <div class="container ">
             <h5 class="text-center">There is no place like 127.0.0.1<h5></div>
         <p class="text-center">-Someone famous in Source Title</p>
         <!--Part 7-->
 
         <div class="jumbotron jumbotron-fluid ">
             <div class="container row d-flex">
-                <div class="col-md-2 col-sm-2"></div>
-                <div class="row col-md-10 col-sm-10">
+                <div class="col-sm-2"></div>
+                <div class="row col-sm-10">
                     <div class="col-md-4 col-sm-12">
-                        <h4 class="text">Bootstrap 101</h4>
-                        <p class="text">hello@bootsrtap101.com</p>
-                        <p class="text">+00 123 456 789</p>
-                        <p class="text-secondary">Laborum aute enim consectetur eu laboris commodo.</p>
+                        <ul class="list-group ">
+                            <li class="list-group "><h4>Bootstrap 101</h4></li>
+                            <li class="list-group">hello@bootsrtap101.com</li>
+                            <li class="list-group pb-2">+00 123 456 789</li>
+                            <li class="list-group text-secondary">Laborum aute enim consectetur eu laboris commodo.</li>
+                        </ul>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <h4 class="text">Pages</h4>
-                        <p class="text-secondary">Nisi in commodo</p>
-                        <p class="text-secondary">reprehenderit</p>
-                        <p class="text-secondary">Nostrud</p>
-                        <p class="text-secondary">Et eu eu</p>
+                        <ul class="list-group">
+                            <li class="list-group"><h4>Pages</h4>
+                                <li class="list-group text-secondary pb-1">Nisi in commodo</li>
+                                <li class="list-group text-secondary pb-1">reprehenderit</li>
+                                <li class="list-group text-secondary pb-1">Nostrud</li>
+                                <li class="list-group text-secondary pb-1">Et eu eu</li>
+                        </ul>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <h4 class="text">Favourites</h4>
-                        <p class="text-secondary">Minim labore nulla</p>
-                        <p class="text-secondary">Nulla qui nisi</p>
-                        <p class="text-secondary">Iris Vor Arnim</p>
-                        <p class="text-secondary">Consectetur cupidata</p>
+                        <ul class="list-group">
+                            <li class="list-group"><h4>Favourites</h4></li>
+                            <li class="list-group text-secondary pb-1">Minim labore nulla</li>
+                            <li class="list-group text-secondary pb-1">Nulla qui nisi</li>
+                            <li class="list-group text-secondary pb-1">Iris Vor Arnim</li>
+                            <li class="list-group text-secondary pb-1">Consectetur cupidata</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-dark text-white ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-center">
+                        <p>© 2018 Your company. All rigths reserved.</p>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <p>Template By Bootstrapious</p>
                     </div>
                 </div>
             </div>
@@ -234,4 +253,3 @@
 
     </body>
 </html>
-
